Fixing spacing on page

--- a/src/components/ItemDetails/ItemDetails.module.css
+++ b/src/components/ItemDetails/ItemDetails.module.css
@@ -17,7 +17,7 @@
     justify-content: center;
     gap: 100px;
     align-items: center;
-    margin: 50px 0px 90px;
+    margin-top: 50px;
 }
 
 .itemDetails {
